<resources>
    <string name="app_name">Rankine</string>
    <string name="search_hint">Search rank sets</string>
    <string name="title_activity_create_rank_set">CreateRankSet</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="save_and_exit_ranking">Save and Exit Ranking</string>
    <string name="first_element_name">First Element Name</string>
    <string name="second_element_name">Second Element Name</string>
    <string name="select_this_element">Select This Element</string>
    <string name="the_second_element_s_image">The second element\'s image</string>
    <string name="the_first_element_s_image">The first element\'s image</string>
    <string name="go_back_to_the_previous_comparison">Go back to the previous comparison</string>
    <string name="save_the_comparisons_completed_so_far">Save the comparisons completed so far</string>
    <string name="exit_the_current_ranking_session">Exit the current ranking session</string>
    <string name="snack_bar_text">Whould you like to undo delete?</string>
    <string name="snack_bar_undo">Delete has been undone</string>
    <string name="RANKING">RANKING</string>
    <string name="COMPLETED">COMPLETED</string>
    <string name="add_a_new_element">Add a new element</string>
    <string name="create_a_new_ranking">Create a new ranking</string>
    <string name="save_the_current_objectset">Save the current ObjectSet</string>
    <string name="the_image_representing_the_objectset">The image representing the ObjectSet</string>
    <string name="enter_name">Enter Name</string>
    <string name="element">Element</string>
    <string name="delete_element">Delete element</string>
    <string name="the_image_for_the_objectset">The image for the ObjectSet</string>
</resources>